<resources>
    <string name="app_name">laundry</string>
    <string name="card_pelanggan_id">Pelanggan ID</string>
    <string name="card_pelanggan_nama">Nama Pelanggan</string>
    <string name="card_pelanggan_alamat">"Alamat "</string>
    <string name="card_pelanggan_NoHp">No HP</string>
    <string name="card_pelanggan_hubungi">Hubungi</string>
    <string name="card_pelanggan_lihat">Lihat</string>
    <string name="card_pegawai_ID">ID pegawai</string>
    <string name="card_pegawai_Nama">Nama Pegawai</string>
    <string name="card_pegawai_No">No HP</string>
    <string name="card_pegawai_terdaftar">Terdaftar</string>
    <string name="card_pegawai_Cabang">Cabang</string>
    <string name="card_pegawai_hubungi">Hubungi</string>
    <string name="card_pegawai_lihat">Lihat</string>
    <string name="card_pelanggan_tambah">Tambah Pelanggan</string>
    <string name="card_pelanggan_NamaLengkap">Nama Lengkap</string>
    <string name="card_pelanggan_Alamat">Alamat</string>
    <string name="card_pelanggan_nohp">No HP</string>
    <string name="card_pelanggan_namacabang">Nama Cabang</string>
    <string name="card_pelanggan_simpan">Simpan</string>
    <string name="card_pegawai_tambah">Tambah Pegawai</string>
    <string name="card_layanan_id">ID Layanan</string>
    <string name="card_layanan_nama">Nama Layanan</string>
    <string name="card_layanan_harga">Harga</string>
    <string name="card_layanan_namacabang">Nama Cabang</string>
    <string name="sukses_simpan_pelanggan">berhasil menyimpan</string>
    <string name="gagal_simpan_pelanggan">Gagal Simpan</string>
    <string name="validasi_Pelanggan_Nama">"nama "</string>
    <string name="validasi_Pelanggan_Alamat">"alamat "</string>
    <string name="validasi_Pelanggan_NoHP">"no hp "</string>
    <string name="validasi_Layanan_Nama">nama</string>
    <string name="validasi_Layanan_namacabang">"nama cabang  "</string>
    <string name="validasi_Layanan_Harga">harga</string>
    <string name="validasi_Cabang_Nama">Cabang Nama</string>
    <string name="validasi_Cabang_Alamat">Alamat Cabang</string>
    <string name="validasi_Cabang_Telepon">Telepon Cabang</string>
    <string name="validasi_Cabang_Layanan">Layanan Cabang</string>
    <string name="sukses_simpan_cabang">simpan cabang</string>
    <string name="gagal_simpan_cabang">gagal cabang</string>
    <string name="tvTitlePegawai">tambah pegawai</string>
    <string name="validasi_Pelanggan_Cabang">Cabang tidak boleh kosong</string>
    <string name="activity_transaksimain">data pelanggan</string>
    <string name="activity_transaksi">nama pelanggan</string>
    <string name="transaksi_nohp">no hp</string>
    <string name="pilihpelanggan_transaksi">pilih pelanggan</string>
    <string name="layananutama_transaksi">layanan utama</string>
    <string name="namalayanan_transaksi">nama layanan</string>
    <string name="harga_transaksi">harga</string>
    <string name="pilihlayanan_transaksi">pilih layanan</string>
    <string name="layanantambahan_transaksi">layanan tambahan</string>
    <string name="tambahan_transaksi">tambahan</string>
    <string name="proses_transaksi">proses</string>
    <string name="tambah_cabang">tambah cabang</string>
    <string name="nama_cabang">nama cabang</string>
    <string name="masukkan_nama_cabang">masukkan nama cabang</string>
    <string name="alamat_tambahcabang">alamat</string>
    <string name="masukkan_alamat">masukkan alamat</string>
    <string name="telepon_cabang">telepon</string>
    <string name="masukkan_nomor_telepon">masukkan nomor telepon</string>
    <string name="layanan_tambahcabang">layanan</string>
    <string name="masukkan_layanan_yangtersedia">masukkan layanan yang tersedia</string>
    <string name="simpan_tambahcabang">simpan</string>
    <string name="activity_layanan">Tambah Layanan</string>
</resources>