<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCard_Pegawai"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <!-- Header Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:backgroundTint="@color/pink"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/tvCard_Pegawai_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_ID"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </androidx.cardview.widget.CardView>

    <!-- Konten Pelanggan -->
    <LinearLayout
        android:id="@+id/lvCard_Pegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvCard_Nama_Pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_Nama"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tvCard_Pegawai_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_alamat"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/tvCard_Pegawai_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_NoHp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/tvCard_Pegawai_Cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_Cabang"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <!-- Tombol Aksi -->
        <LinearLayout
            android:id="@+id/lhCard_Pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btCard_Pegawai_Hubungi"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/card_pelanggan_hubungi"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/pink"
                android:textColor="@color/text"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btCard_Pegawai_Lihat"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/card_pelanggan_lihat"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/pink"
                android:textColor="@color/text"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
