<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCard_Pelanggan"
    android:padding="16dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/pink">

        <TextView
            android:id="@+id/tvCard_Pelanggan_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_id"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="10dp"
            android:paddingBottom="4dp"
            android:layout_marginStart="10dp"/>

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/lvCard_Pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvCard_Pelanggan_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_nama"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tvCard_Pelanggan_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_alamat"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tvCard_Pelanggan_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_NoHp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:id="@+id/lhCard_Pelanggan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btCard_Pelanggan_Hubungi"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/card_pelanggan_hubungi"
                android:backgroundTint="@color/pink"
                android:textColor="@color/text"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <Button
                android:id="@+id/btCard_Pelanggan_Lihat"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/card_pelanggan_lihat"
                android:backgroundTint="@color/pink"
                android:textColor="@color/text"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>


    </LinearLayout></androidx.cardview.widget.CardView>