<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCard_Pelanggan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <!-- Header -->
        <TextView
            android:id="@+id/tvCard_Pelanggan_Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_id"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/pink"
            android:padding="8dp"
            android:layout_marginBottom="8dp" />

        <!-- Body -->
        <TextView
            android:id="@+id/tvCard_Pelanggan_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_nama"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tvCard_Pelanggan_Alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_alamat"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tvCard_Pelanggan_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_NoHp"
            android:textSize="16sp"
            android:textColor="@color/text"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
