<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0C4C4"
    tools:context=".pelanggan.TambahPelanggan">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_pegawai_tambah"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvNama"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_NamaLengkap"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintBottom_toTopOf="@+id/etgaris1"/>

    <EditText
        android:id="@+id/etgaris1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/card_pelanggan_NamaLengkap"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvAlamat"
        app:layout_constraintTop_toBottomOf="@+id/tvNama"/>

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_alamat"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etgaris2"
        app:layout_constraintTop_toBottomOf="@+id/etgaris1"/>

    <EditText
        android:id="@+id/etgaris2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:hint="@string/card_pelanggan_alamat"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvNo"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"/>

    <TextView
        android:id="@+id/tvNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_NoHp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etgaris3"
        app:layout_constraintTop_toBottomOf="@+id/etgaris2"/>

    <EditText
        android:id="@+id/etgaris3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle"
        android:hint="@string/card_pelanggan_NoHp"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:inputType="phone"
        android:maxLength="14"
        android:paddingLeft="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvcabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNo" />

    <TextView
        android:id="@+id/tvcabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_namacabang"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etgaris3"
        app:layout_constraintBottom_toTopOf="@id/btsimpan"/>

    <EditText
        android:id="@+id/etgaris4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle"
        android:hint="@string/card_pelanggan_namacabang"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btsimpan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcabang" />

    <Button
        android:id="@+id/btsimpan"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/etgaris4"
        android:text="@string/card_pelanggan_simpan"
        android:textSize="20dp"
        android:layout_marginBottom="200dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>