<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0C4C4"
    tools:context=".pelanggan.TambahPelanggan">

    <TextView
        android:id="@+id/tvTitlePelanggan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_tambah"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvNamaPelanggan"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvNamaPelanggan"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_NamaLengkap"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitlePelanggan"
        app:layout_constraintBottom_toTopOf="@+id/etgaris1pelanggan"/>

    <EditText
        android:id="@+id/etgaris1pelanggan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/card_pelanggan_NamaLengkap"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvAlamatPelanggan"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaPelanggan"/>

    <TextView
        android:id="@+id/tvAlamatPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_alamat"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etgaris2pelanggan"
        app:layout_constraintTop_toBottomOf="@+id/etgaris1pelanggan"/>

    <EditText
        android:id="@+id/etgaris2pelanggan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:hint="@string/card_pelanggan_alamat"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvNoPelanggan"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamatPelanggan"/>

    <TextView
        android:id="@+id/tvNoPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_pelanggan_NoHp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etgaris3pelanggan"
        app:layout_constraintTop_toBottomOf="@+id/etgaris2pelanggan"/>

    <EditText
        android:id="@+id/etgaris3pelanggan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle"
        android:hint="@string/card_pelanggan_NoHp"
        android:inputType="phone"
        android:maxLength="14"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btsimpanpelanggan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoPelanggan" />


    <Button
        android:id="@+id/btsimpanpelanggan"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/etgaris3pelanggan"
        android:text="@string/card_pelanggan_simpan"
        android:textSize="20dp"
        android:layout_marginBottom="200dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>