<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0C4C4"
    tools:context=".layanan.TambahLayanan">

    <TextView
        android:id="@+id/tvTitleLayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tambah Layanan"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvNamaLayanan"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvNamaLayanan"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/card_layanan_nama"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLayanan"
        app:layout_constraintBottom_toTopOf="@+id/etgaris1layanan"/>

    <EditText
        android:id="@+id/etgaris1layanan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/card_layanan_nama"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvAlamatLayanan"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaLayanan"/>

    <TextView
        android:id="@+id/tvAlamatLayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_layanan_harga"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etgaris2layanan"
        app:layout_constraintTop_toBottomOf="@+id/etgaris1layanan"/>

    <EditText
        android:id="@+id/etgaris2layanan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:hint="@string/card_layanan_harga"
        android:paddingLeft="10dp"
        android:maxLength="7"
        android:inputType="number"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvNoLayanan"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamatLayanan"/>

    <TextView
        android:id="@+id/tvNoLayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_layanan_namacabang"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etgaris3layanan"
        app:layout_constraintTop_toBottomOf="@+id/etgaris2layanan"/>

    <EditText
        android:id="@+id/etgaris3layanan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle"
        android:hint="@string/card_layanan_namacabang"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btsimpanLayanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoLayanan" />


    <Button
        android:id="@+id/btsimpanLayanan"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/etgaris3layanan"
        android:text="@string/card_pelanggan_simpan"
        android:textSize="20dp"
        android:layout_marginBottom="200dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>